MFH: Fixed Bug #25694 (round() and number_format() give inconsistent results).